Fixed Font Awesome on iOS

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -10,7 +10,9 @@
 }
 
 .fas {
-    font-family: "FontAwesomeSolid";
+    font-family: "FontAwesomeSolid", "FontAwesomeRegular", "FontAwesome";
+    font-size: 18;
+
 }
 
 // Common page class
